--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,49 @@
-/.phpunit.cache
-/bootstrap/ssr
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/resources/js/actions
-/resources/js/routes
-/resources/js/wayfinder
-/storage/*.key
-/storage/pail
-/vendor
-.DS_Store
+# Dependencias (se instalan con npm install y composer install)
+/vendor/
+/node_modules/
+
+# Build compilado (se regenera con npm run build)
+/public/build/
+/dist/
+
+# Archivos de entorno (contienen datos sensibles locales)
 .env
+.env.local
+.env.*.local
 .env.backup
-.env.production
-.env.sqlite
-.env.docker
-.phpactor.json
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
-/auth.json
-/.fleet
-/.idea
+
+# Logs y caché temporal (se regeneran)
+/storage/logs/*
+/storage/framework/cache/*
+/storage/framework/sessions/*
+/storage/pail/
+
+# IDE personales (cada desarrollador usa el suyo)
+.vscode/
+.idea/
 /.nova
-/.vscode
-/.zed
+/.fleet
+
+# Archivos del SO (no afectan al proyecto)
+.DS_Store
+Thumbs.db
+
+# Archivos temporales de editores
+*.swp
+*.swo
+*~
+.sublime-project
+.sublime-workspace
+
+# Logs de npm
+npm-debug.log*
+yarn-error.log*
+
+# Caché de herramientas
+.phpunit.result.cache
+.eslintcache
+.turbo/
+
+# Ignorar todos los .md EXCEPTO README.md
+*.md
+!README.md
